--- a/src/main/resources/templates/owner/editOwner.html
+++ b/src/main/resources/templates/owner/editOwner.html
@@ -95,8 +95,13 @@
 <div class="container" style="margin-top: 70px ">
 
   <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-    <form class="col s12" name='f' method="post" th:action="@{/saveEditOwner/{id}(id=${idOwner})}"  th:object="${ownerDto}" style="width: 500px;">
+    <form class="col s12" name='f' method="post" th:action="@{/saveEditOwner}"  th:object="${ownerDto}" style="width: 500px;">
 
+      <div class='row'>
+        <div class='input-field col s12'>
+          <input id="idOwner" class='validate' type="text" name="id" th:value="${idOwner}" hidden>
+        </div>
+      </div>
       <div class='row'>
         <div class='input-field col s12'>
           <input id="fullName" class='validate' type="text" name="nom" th:field="*{fullName}"  th:value="*{fullName}">
@@ -112,8 +117,8 @@
 
       <div class='row'>
         <div class='input-field col s12'>
-          <input id="password" class='validate'  name="text"  type="password" th:field="*{password}" th:value="*{password}">
-          <label for="password">Password</label>
+          <input id="password" class='validate'  name="password"  type="password" th:field="*{password}" hidden>
+          <label for="password" hidden>Password</label>
         </div>
       </div>
       <div class='row'>
